# Configuration for setup.py.
[bdist_wheel]
# Produce one wheel that works both with Python 2 and 3.
universal = 1

[metadata]
description = validated reading of tabular files (CVS, Excel, ODS, PRN)
author = Thomas Aglassinger
author_email = roskakori@users.sourceforge.net
license = lgpl3
url = https://pypi.python.org/pypi/cutplace
# Comma separated list of data INSIDE your package to include.
# DO NOT prepend the package name when specifying files and folders.
package_data = 
# Comma separated list of data OUTSIDE your package to include.
# Equivalent to adding files to MANIFEST.in which is not needed.
data_files = *.rst, *.txt
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = Development Status :: 5 - Production/Stable,
              Environment :: Console,
              Intended Audience :: Developers,
              Intended Audience :: Information Technology,
              License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL),
              Natural Language :: English,
              Operating System :: OS Independent,
              Programming Language :: Python,
              Programming Language :: Python :: 2,
              Programming Language :: Python :: 2.6,
              Programming Language :: Python :: 2.7,
              Programming Language :: Python :: 3,
              Programming Language :: Python :: 3.3,
              Programming Language :: Python :: 3.4,
              Programming Language :: Python :: 3.5,
              Topic :: Documentation,
              Topic :: Software Development :: Quality Assurance,
              Topic :: Software Development :: Testing

[console_scripts]
cutplace = cutplace.applications:main_for_script

[data_files]
# Add here data to be included which lies OUTSIDE your package, e.g.
# path/to/destination = files/to/include, others/to/include
# This is the same as adding files to MANIFEST.in which is not needed anymore.
# The destination is relative to the root of your virtual environment.
# Use ** as wildcard if you want to recursively include a pattern, e.g.
# tests/**.py would include all py-files in all subfolders of tests.

[extras_require]
# Add here additional requirements for extra features, like:
# PDF = ReportLab>=1.2, RXP

[pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts = tests
    --cov cutplace --cov-report html
    --verbose

[aliases]
test = pytest
